Video editor thumbnails don't show at the default zoom level #93314

Closed
opened 2021-11-22 23:27:09 +01:00 by Wouter Stomp · 15 comments

System Information
Operating system: macOS-12.0.1-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Max Apple 4.1 Metal - 76.1

Blender Version
Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-19 19:57, hash: fb0ea94c63
Worked: -

Short description of error
With the default zoom level (at least on my 16" MacBook Pro) when you turn on thumbnails for the strips in the video editor, nothing happens. Only once you zoom in further than the default level thumbnails start to appear. At the default zoom level the strips still seem more than large enough at that zoom level to show useful thumbnails.

(as a sidenote, for the thumbnails it would be very helpful if the text bar above the thumbnails would be transparent on top of the thumbnails so they can be somewhat larger)

Exact steps for others to reproduce the error
Go to the video editing workspace
Add a video strip
Enable the thumbnail overlay

**System Information** Operating system: macOS-12.0.1-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Max Apple 4.1 Metal - 76.1 **Blender Version** Broken: version: 3.0.0 Beta, branch: master, commit date: 2021-11-19 19:57, hash: `fb0ea94c63` Worked: - **Short description of error** With the default zoom level (at least on my 16" MacBook Pro) when you turn on thumbnails for the strips in the video editor, nothing happens. Only once you zoom in further than the default level thumbnails start to appear. At the default zoom level the strips still seem more than large enough at that zoom level to show useful thumbnails. (as a sidenote, for the thumbnails it would be very helpful if the text bar above the thumbnails would be transparent on top of the thumbnails so they can be somewhat larger) **Exact steps for others to reproduce the error** Go to the video editing workspace Add a video strip Enable the thumbnail overlay
Author

Added subscriber: @blenderrocket

Added subscriber: @blenderrocket

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I can imagine this to be an issue as current threshold is relatively close to default zoom level. Can you share resolution and DPI of your display? Possibly screenshot would be fine, I can count pixels myself then.

In any case to confirm, that new threshold is correct, can you test custom build to make sure I get it correct?

I can imagine this to be an issue as current threshold is relatively close to default zoom level. Can you share resolution and DPI of your display? Possibly screenshot would be fine, I can count pixels myself then. In any case to confirm, that new threshold is correct, can you test custom build to make sure I get it correct?
Author

3456 x 2234 with 254 pixels per inch (with the default (2x?) macOS scaling on top of that)

I can test a custom build for you yes. Isn’t it possible to not have a threshold at all? Even when very small the thumbnails can convey useful information to discern one strip from another.

3456 x 2234 with 254 pixels per inch (with the default (2x?) macOS scaling on top of that) I can test a custom build for you yes. Isn’t it possible to not have a threshold at all? Even when very small the thumbnails can convey useful information to discern one strip from another.

Thanks for info. Having no threshold may cause performance issues, so not sure about that. I think some limit is good for "overall look", but will consult this aspect.

Thanks for info. Having no threshold may cause performance issues, so not sure about that. I think some limit is good for "overall look", but will consult this aspect.

Added subscriber: @tintwotin

Added subscriber: @tintwotin

On a HD screen on Windows the thumbnails would be useable with a much lower no-draw-limit(default zoom level):
min_thumb_height.gif

On a HD screen on Windows the thumbnails would be useable with a much lower no-draw-limit(default zoom level): ![min_thumb_height.gif](https://archive.blender.org/developer/F11883995/min_thumb_height.gif)

This issue was referenced by e29026bb4b

This issue was referenced by e29026bb4b4d71800f6eea9b7f1ea06bfa5926b1

This issue was referenced by 7d1a10a9bb

This issue was referenced by 7d1a10a9bbf38cca571f56d32c799d9740d07423

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Richard Antalik self-assigned this 2021-12-06 17:02:28 +01:00

Sorry I am not sure if I checked this with older build or just assumed this was problem only on high DPI screens. I have bisected this to daaa43232d, so this was unintended change.

@blenderrocket please check latest alpha build and let me know if this threshold works for you. I have lowered it to point where I can barely tell what content is even though I shot footage myself.

Sorry I am not sure if I checked this with older build or just assumed this was problem only on high DPI screens. I have bisected this to daaa43232d34, so this was unintended change. @blenderrocket please check latest alpha build and let me know if this threshold works for you. I have lowered it to point where I can barely tell what content is even though I shot footage myself.
Author

They are visible at the default zoom level now, nevertheless, in my opinion they still disappear way too early. See the screenshot, although you can't really tell what happens in the thumbnails, they are still very helpful to identify one strip from another, and to identify scene changes in the strip. The screenshot is at the zoom level just before the thumbnails disappear, even at half that size they would still be useful.

Schermafbeelding 2021-12-07 om 19.46.55.png

They are visible at the default zoom level now, nevertheless, in my opinion they still disappear way too early. See the screenshot, although you can't really tell what happens in the thumbnails, they are still very helpful to identify one strip from another, and to identify scene changes in the strip. The screenshot is at the zoom level just before the thumbnails disappear, even at half that size they would still be useful. ![Schermafbeelding 2021-12-07 om 19.46.55.png](https://archive.blender.org/developer/F12705166/Schermafbeelding_2021-12-07_om_19.46.55.png)

Thanks for screenshot. here threshold is about 18px, on your screen it's about 40, so it would probably make sense to not consider DPI.

Thanks for screenshot. here threshold is about 18px, on your screen it's about 40, so it would probably make sense to not consider DPI.
Author

18px sounds reasonable :-)

18px sounds reasonable :-)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93314
No description provided.