Fix T93314: Thumbnails not drawn with default scale

Decrease threshold for drawing thumbnails.

This was unintended change in daaa43232d34 that was overlooked.